Fixed bleeding content footer

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,7 @@
 footer {
   display: flex;
+  width: 100%;
+  box-sizing: border-box;
   flex-direction: column;
   justify-content: center;
   text-align: center;
@@ -40,18 +42,27 @@ footer {
 
 .footer-content {
   display: flex;
+  width: 100%;
+  box-sizing: border-box;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
 .footer-image-container {
-  margin: 2em;
+  width: 30%;
+  margin: 0.5em;
+}
+.footer-image {
+  max-width: 100%;
+  object-fit: contain;
 }
 
 .footer-links-container {
-  margin: 2em;
+  width: 70%;
+  margin: 1em;
   display: flex;
+  box-sizing: border-box;
   flex-direction: row;
   justify-content: center;
   text-align: center;
@@ -70,11 +81,12 @@ footer {
 .institute,
 .contact {
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0.75em;
-  margin: 0.75em;
-  width: 15vw;
+  padding: 0.5em;
+  margin: 0.5em;
+  width: 33.33%;
 }
 
 .quick-links > a,
@@ -154,6 +166,9 @@ footer {
   .social-media > img {
     margin: 0.5em;
   }
+  .contact {
+    width: 100%;
+  }
   .contact > a {
     font-size: 1em;
     margin: auto;
@@ -161,6 +176,7 @@ footer {
     text-align: center;
   }
   .institute {
+    width: 100%;
     align-items: center;
     justify-content: center;
     font-size: 2em;
