--- a/styles/our-courses-mobile.css
+++ b/styles/our-courses-mobile.css
@@ -85,7 +85,8 @@
     padding: 0.5em;
     width: 100%;
   }
-  .standard-courses-image {
+  .standard-courses-image,
+  .conversation-courses-image {
     width: 90%;
     height: auto;
     align-self: flex-end;
@@ -134,6 +135,7 @@
   }
   .refresher-courses-content {
     padding-left: 0.2em;
+    width: 90%;
   }
   .refresher-courses-top-image,
   .conversation-courses-top-image {
