--- a/styles/our-courses.css
+++ b/styles/our-courses.css
@@ -13,7 +13,7 @@ header {
 .header-content {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 50%;
   padding: 1em;
   margin: 3em;
   margin-right: 1em;
@@ -22,7 +22,7 @@ header {
 }
 .header-image {
   display: flex;
-  width: 40%;
+  width: 100%;
   margin: 2em;
   margin-left: 1em;
   justify-content: center;
@@ -40,7 +40,7 @@ nav {
   font-style: normal;
   line-height: 1.22;
   letter-spacing: 2.43px;
-  text-align: center;
+  /* text-align: center; */
   color: #001436;
 }
 
